<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/home" />

    <item
        android:id="@+id/nav_request"
        android:icon="@drawable/ic_baseline_person_add_24"
        android:title="@string/request" />
    <item
        android:id="@+id/nav_post"
        android:icon="@drawable/ic_baseline_add_24"
        android:title="@string/post" />

    <item
        android:id="@+id/nav_message"
        android:icon="@drawable/ic_baseline_chat_24"
        android:title="@string/messages" />
    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_baseline_person_24"
        android:title="@string/profile" />

</menu>