<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.ProfileFragment">

        <com.mikhaellopez.circularimageview.CircularImageView
            android:id="@+id/profile_img"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_marginTop="24dp"
            app:layout_constraintBottom_toTopOf="@id/profile_name_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/profile_name_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:layout_constraintBottom_toTopOf="@id/profile_bio_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/profile_img">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/profile_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/name"
                android:inputType="textPersonName" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/profile_bio_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_margin="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/profile_name_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/profile_bio"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/bio"
                android:maxLines="4"
                android:inputType="textMultiLine" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/profile_save_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:padding="16dp"
            android:text="@string/save"
            app:layout_constraintBottom_toTopOf="@+id/profile_logout_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/profile_logout_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:padding="16dp"
            android:text="@string/logout"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
